# CUDA-OPENGL-interface-simple-example

./: .gitignore  CMakeLists.txt  README.md  simple.cu
cmake/: FindGLFW.cmake
